--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <eit-header></eit-header>
+<eit-home></eit-home>
 <router-outlet></router-outlet>
