Agregando un nuevo modulo, generando un nuevo elemento dentro de ese módulo y accediendo a el desde fuera

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <eit-header></eit-header>
 <eit-home></eit-home>
+<eit-interruptor></eit-interruptor>
 <router-outlet></router-outlet>
